--- a/scikit_learn_tutorial.ipynb
+++ b/scikit_learn_tutorial.ipynb
@@ -11,22 +11,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "67088e06",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pandas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Install Scikit-learn\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;66;03m# Uncomment the line below if Scikit-learn is not installed\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# !pip install scikit-learn\u001b[39;00m\n\u001b[32m      4\u001b[39m \n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m# Import libraries\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m      7\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m datasets\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'pandas'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Install Scikit-learn\n",
     "# Uncomment the line below if Scikit-learn is not installed\n",
@@ -49,10 +37,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "29784a65",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Features: [[5.1 3.5 1.4 0.2]\n",
+      " [4.9 3.  1.4 0.2]\n",
+      " [4.7 3.2 1.3 0.2]\n",
+      " [4.6 3.1 1.5 0.2]\n",
+      " [5.  3.6 1.4 0.2]]\n",
+      "Labels: [0 0 0 0 0]\n"
+     ]
+    }
+   ],
    "source": [
     "# Load a sample dataset\n",
     "from sklearn.datasets import load_iris\n",
@@ -74,10 +75,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "686d0384",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scaled Features: [[-0.90068117  1.01900435 -1.34022653 -1.3154443 ]\n",
+      " [-1.14301691 -0.13197948 -1.34022653 -1.3154443 ]\n",
+      " [-1.38535265  0.32841405 -1.39706395 -1.3154443 ]\n",
+      " [-1.50652052  0.09821729 -1.2833891  -1.3154443 ]\n",
+      " [-1.02184904  1.24920112 -1.34022653 -1.3154443 ]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Preprocess data\n",
     "from sklearn.preprocessing import StandardScaler\n",
@@ -98,10 +111,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "7b37f21f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training set size: (120, 4)\n",
+      "Test set size: (30, 4)\n"
+     ]
+    }
+   ],
    "source": [
     "# Split the dataset\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -122,10 +144,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "7864c983",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model trained successfully.\n"
+     ]
+    }
+   ],
    "source": [
     "# Train a model\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -146,10 +176,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "af3ec0aa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 1.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Evaluate the model\n",
     "from sklearn.metrics import accuracy_score\n",
@@ -170,10 +208,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "622846fe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predictions: [1 0 2 1 1]\n"
+     ]
+    }
+   ],
    "source": [
     "# Make predictions\n",
     "new_data = X_test[:5]\n",
